--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
 		"test": "jest"
 	},
 	"dependencies": {
-		"react": "16.0.0-alpha.6",
-		"react-native": "0.44.1"
+		"react": "15.4.1",
+		"react-native": "0.41.0"
 	},
 	"devDependencies": {
 		"babel-jest": "20.0.3",
